MOSIP-37455 Added surefire and jacoco plugin for sonar coverage (#1405)
* MOSIP-37455 Added surefire and jacoco plugin for sonar coverage

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* [DSD-7086] Updated upload artifact version push-trigger.yml

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

---------

Signed-off-by: kameshsr <kameshsr1338@gmail.com>